--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -12,19 +12,26 @@
   align-content: center;
 }
 
+.text, .restart {
+  display: flex;
+  width: 90%;
+  margin: 10px;
+  flex-wrap: wrap;
+}
+
 .typingtest,  .stats{
   display: flex;
   min-width: 500px;
-  width: 80%;
+  width: 90%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 0;
   border: 1px black solid;
 }
 
 .submenu {
   display: flex;
-  width: 100%;
+  width: 80%;
   justify-content: space-between;
 }
+
