restart button keeps track of selected time

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap');
+
 #root {
   display: flex;
   justify-content: center;
@@ -13,10 +15,8 @@
 }
 
 .text, .restart {
-  display: flex;
   width: 90%;
-  margin: 10px;
-  flex-wrap: wrap;
+  margin: 15px auto 15px;
 }
 
 .typingtest,  .stats{
@@ -35,7 +35,7 @@
   justify-content: space-between;
 }
 
-.time-selection-container {
+.time-selection-container, .panel-container {
   display: flex;
 }
 
@@ -44,6 +44,18 @@
 }
 
 div {
-  font-family:sans-serif;
+  font-family: 'Noto Serif JP';
   font-size: 20px;
+}
+
+.stats-toggle {
+  display: flex;
+  align-self: center;
+  font-size: 25px;
+  color: rgb(42, 42, 42);
+}
+
+.textbox {
+  display: flex;
+  margin: 0 auto;
 }
