--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -8,7 +8,6 @@
 .app {
   display: flex;
   height: 97vh;
-  border: 1px black solid;
   width: 1200px;
   justify-content: center;
   align-content: center;
@@ -26,7 +25,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px black solid;
 }
 
 .submenu {
@@ -40,7 +38,24 @@
 }
 
 .time-selection, .countdown-timer, .stats-toggle {
-  margin: 0px 15px 0px 15px
+  margin: 0px 15px 0px 15px;
+  padding: 10px 15px 10px 15px;
+  border-radius: 3px;
+  border: 1px solid gray;
+}
+
+.time-selection-selected {
+  background-color: black;
+  color: white;
+  margin: 0px 15px 0px 15px;
+  padding: 10px 15px 10px 15px;
+  border-radius: 3px;
+  border: 1px solid gray;
+}
+
+.stats-toggle {
+  padding-top: 12.5px;
+  padding-bottom: 12.5px;
 }
 
 div {
